[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "cmake", "scikit-build"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = [
    "cp38-manylinux*",
    "cp39-manylinux*",
    "cp310-manylinux*",
    "cp311-manylinux*",
    "cp312-manylinux*",
    "cp313-manylinux*",
]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-all = [
    "yum install -y fftw-devel wget python3 sudo gcc",
    "wget https://github.com/jackaudio/jack2/archive/v1.9.22.tar.gz",
    "tar xzf v1.9.22.tar.gz",
    "cd jack2-1.9.22",
    "python3 ./waf configure",
    "/usr/bin/sudo python3 ./waf install",
    "cd ..",
    "wget https://www.alsa-project.org/files/pub/lib/alsa-lib-1.2.9.tar.bz2",
    "tar xjf alsa-lib-1.2.9.tar.bz2",
    "cd alsa-lib-1.2.9",
    "./configure",
    "make",
    "/usr/bin/sudo make install",
    "cd ..",
    "git clone https://github.com/libsndfile/libsndfile.git",
    "cd libsndfile",
    "cmake -DBUILD_SHARED_LIBS=1 .",
    "make",
    "make install",
    "cd ..",
    "curl https://raw.githubusercontent.com/mackron/miniaudio/master/miniaudio.h -o source/include/signalflow/node/io/output/miniaudio-library.h",
]

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]
before-all = [
    "brew install cmake python libsndfile",
    "curl https://raw.githubusercontent.com/mackron/miniaudio/master/miniaudio.h -o source/include/signalflow/node/io/output/miniaudio-library.h",
]
